hphp/hack/test/typecheck/lsb_disallow_override_protected.php
<?hh

class A {
  <<__LSB>> protected static int $x = 0;
}

class B extends A {
  protected static int $x = 1;
}
